<resources>
    <string name="app_name">Noriotter2</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="twitter_sinin">Connect to Twitter</string>
    <string name="this_connect_now">" It is already connected. "</string>
    <string name="this_connect_now_mass">" It is already connected. Would you like to disconnect?"</string>
    <string name="dis_connect">Disconnect</string>
    <string name="twitter_connect_ok">Twitter connection is complete</string>
    <string name="twitter_connect_error">Twitter Connection failed</string>
    <string name="twitter_connect_please">Need a Twitter connection</string>
    <string name="menber">Menbers:%1$d</string>
    <string name="owner">Owner:%1$s</string>
    <string name="getting_follow_user_now">Follow user getting now......</string>
    <string name="getting_follower_user_now">Follower user getting now......</string>
    <string name="getting_list_user_now">List user getting now......</string>
    <string name="getting_list_now">List getting now......</string>
    <string name="getting_list_user_more_now">Retrieving users for %1$d users \n %2$d being added to the list ......</string>
    <string name="processing">Processing</string>
    <string name="connect">connect</string>
    <string name="icon">icon</string>
    <string name="api_limit">Api API limit. Try again in 15 minutes.</string>
    <string name="profile">Profile</string>
    <string name="list">List</string>
    <string name="search">Search</string>
    <string name="free_tweet">Free Tweet</string>
    <string name="other">Other</string>
    <string name="setting">Setting</string>
    <string name="oss">Open Source License</string>
    <string name="home">Home</string>
    <string name="real_time_home">Realtime\nHome</string>
    <string name="notice">Mention \n RT</string>
    <string name="dm">DM</string>
    <string name="welcome" translatable="false">Welcome to Noriotter2</string>
    <string name="welcome_info">Welcome to Noriotter \n To use this application, you first need to link with Twitter and log in.</string>
    <string name="now_hint">NANISITEN?</string>
    <string name="follow_count">%1$d Following</string>
    <string name="follower_count">%1$d Followers</string>
    <string name="start_noriotter">Start Noriotter2 !!</string>
    <string name="tweets">Tweets</string>
    <string name="users">Users</string>
    <string name="follow">Follow</string>
    <string name="follower">Follower</string>
    <string name="mention">Mention</string>
    <string name="like">Like</string>
    <string name="getting_user_now">User search now</string>
    <string name="retweet">Retweet</string>
    <string name="quit_tweet">Quit Tweet</string>
    <string name="reply">Reply</string>
    <string name="logout">Logout</string>
    <string name="capture_connecting_now">Capture Connecting Now…</string>
    <string name="accept">Accepted</string>
    <string name="lock">Private</string>
</resources>
